# CosmicMuon-Detection-with-Co-FPMD_GEANT4

./: CMakeLists.txt  README.md  simulation.cc
Analysis/: Calibration.cc  Calibration.ipynb  calibration_results.root
EcoMug/: a.out  create_root.ipynb  hist.py  muon_data.txt  p_data.txt  phi_data.txt  test.C  test_1.C  theta_data.txt
Event-Gen/: EcoMug.h  gen.C
Geant4/Add_Detector/: CMakeLists.txt  copied.txt
Geant4/Add_gun/: CMakeLists.txt  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  simulation.cc
Geant4/Adding Detector/: construction.cc  construction.hh  copied.c  copied.txt  detector.cc
Geant4/Final_Simulation/: action.cc  construction.cc  construction.hh  detector.cc  generator.cc  run.mac  simulation.cc
Geant4/Final_Simulation _safe_copy/: action.cc  action.hh  construction.cc  construction.hh  simulation.cc
Geant4/Final_Simulation _tweaks/: construction.cc
Geant4/Sim/: construction.cc  construction.hh  simulation.cc
Geant4/Simulation_lab/: CMakeLists.txt  action.cc  action.hh  c1onstruction.cc  construction.cc  construction.hh  detector.hh  generator.cc  histogram.py  physics.hh  simulation.cc  vis.mac
Geant4/Simulation_lab/Add_gun/: construction.cc  generator.cc  generator.hh
Geant4/Testing Copy/: construction.cc  detector.cc  generator.cc  generator.hh  simulation.cc  vis.mac
Geant4/Trial/: CMakeLists.txt  sim.cc
Geant4/Working Folder/: CMakeLists.txt  action.cc  construction.cc  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  gun_data.txt  (+8 more)
Inputs/: run.mac
Outputs/: 0_t1.root  100GeV.root  1GeV.root  1_t0.root  20GeV.root  2GeV.root  50GeV.root  600MeV.root  60GeV.root  700MeV.root  800MeV.root  80GeV.root  900MeV.root  add.sh  output_0_t3.root  output_t0.root  output_t1.root  output_t2.root  output_t3.root  outputs0_t0.root  outputs0_t1.root  outputs0_t2.root  outputs0_t3.root  remove.sh
Presentation/: VECC-Presentation-1-Cosmic_Muons.pptx  download.avif
ROOT/: output.txt
Report/: bib.bib  main.aux  main.blg  main.out  main.tex  main.toc  rough.txt
Root/: Trial1.py  data.txt  output.root  trial.c  trial.py
include/: action.hh  construction.hh  generator.hh  run.hh  stepping.hh
macros/: run.mac
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
(+205 files in other folders)
